--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:ui": "rm -rf dist && cd ../booknook_frontend && npm run build && cp -r dist ../booknook_backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "json-server -p3001 --watch db.json"
